Add custom styling to form and other HTML elements

--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,15 @@
     <form id="form">
       <label>Search Term:</label>
       <input class="form-control" type="text" placeholder="search term" id="searchInput" required>
-      <label>Search Type:</label>
+      <label>Search By:</label>
       <select class="form-control" id="searchType">
-        <option>Name</option>
-        <option>Symptom</option>
+        <option>Your Symptom</option>
+        <option>Doctor's Name</option>
       </select>
-      <button type="sumbit" class="btn btn-primary btn-block btn-lg">Search Doctors</button>
+      <button type="submit" class="btn btn-primary btn-block btn-lg">Search A Doctor</button>
     </form>
     <div id="doctors">
-      
+
     </div>
   </div>
 </body>
