Make successful requests based on user input

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
       <input class="form-control" type="text" placeholder="search term" id="searchInput" required>
       <label>Search By:</label>
       <select class="form-control" id="searchType">
-        <option>Your Symptom</option>
-        <option>Doctor's Name</option>
+        <option value="query">Your Symptom</option>
+        <option value="name">Doctor's Name</option>
       </select>
       <button type="submit" class="btn btn-primary btn-block btn-lg">Search A Doctor</button>
     </form>
