Add 'get current location' button to form

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,10 @@
         <option value="query">Your Symptom</option>
         <option value="name">Doctor's Name</option>
       </select>
+      <button id="locationBtn" class="btn btn-success btn-lg">Get Current Location</button>
       <button type="submit" class="btn btn-primary btn-block btn-lg">Search A Doctor</button>
     </form>
+    <p id="locationOutput"></p>
     <div id="doctors">
 
     </div>
