Add iframe for google maps API

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,11 @@
         <option value="query">Your Symptom</option>
         <option value="name">Doctor's Name</option>
       </select>
-      <button id="locationBtn" class="btn btn-success btn-lg">Get Current Location</button>
+      <div class="locationDiv">
+        <button id="locationBtn" class="btn btn-success btn-lg">Get Current Location</button>
+        <iframe width="400" height="300" frameborder="0" style="border:0"
+  src="" allowfullscreen></iframe>
+      </div>
       <button type="submit" class="btn btn-primary btn-block btn-lg" id="formSubmit">Search A Doctor</button>
     </div>
     <div id="doctors">
